--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "ryihan/test-pakage",
     "description": "A short description of what your package does",
+    "type": "library",
+    "keywords": ["ryihan","ryihan2"],
     "require": {
         "php": ">=7.4",
         "another-vendor/package": "1.*"
